--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.26.2",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
